HasCASL/test/PatternEq.hascasl.output
type s, t
op snd : s × t -> t
program snd : s × t -> t ((x : s, y : t)) = (var y : t)
program snd : s × t -> t ((x : s, y : t)) = (var y : t)
program snd : s × t -> t ((x : s, y : t)) = (var y : t) : t
program snd : s × t -> t ((x : s, y : t)) : t = (var y : t)
program snd : s × t -> t ((x : s, y : t)) : t = (var y : t)
program snd : s × t -> t ((x : s, y : t)) : t = (var y : t)
program (x : s, y : s) = (x : s, y : s)
op a : s
program b : s = a
op b : s
program b : s = (op a : s)
op x : s; y : t
op c : t = (op snd : s × t -> t) ((op x : s) : s, (op y : t) : t)
%% Type Constructors -----------------------------------------------------
s : Type
t : Type
%% Assumptions -----------------------------------------------------------
a : s
b : s = (op a : s)
c : t = (op snd : s × t -> t) ((op x : s) : s, (op y : t) : t)
snd : s × t -> t = \ (x : s, y : t) . (var y : t)
x : s
y : t
%% Diagnostics -----------------------------------------------------------
Error (line 6, column 10) different terms of 'snd'
	\ (x : s, y : t) . (var y : t)
	\ (x : s, y : t) . (var y : t) : t
	

Error (line 14, column 10) no toplevel pattern '(x : s, y : s)'
Error (line 17, column 9) no toplevel pattern 'b : s'
